se hicieron cambios landing page , y se agrego funciones administrador

--- a/src/app/components/diagnostico/diagnostico.component.html
+++ b/src/app/components/diagnostico/diagnostico.component.html
@@ -1,19 +1,26 @@
 <div class="co-te">
     <div class="container">
-        <h1>Diagnóstico</h1>
-        <div class="circles">
-            <div class="circle">
-                <input type="text" placeholder="Información 1">
-            </div>
-            <div class="plus">+</div>
-            <div class="circle">
-                <input type="text" placeholder="Información 2">
-            </div>
-            <div class="plus">+</div>
-            <div class="circle">
-                <input type="text" placeholder="Información 3">
-            </div>
+      <h1>Diagnóstico</h1>
+      <div class="circles">
+        <!-- Primer círculo con 3 círculos superpuestos -->
+        <div class="circle">
+            <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1724232054/Captura_de_pantalla_2024-08-21_041701-modified_lnezmp.png" width="180px" alt="Descripción de la imagen">
         </div>
-        <p class="description">Utilizamos estos tres métodos para evaluar tu negocio y potenciar tus capacidades.</p>
+        
+        <div class="plus">+</div>
+        
+        <!-- Segundo círculo con un mapa de coordenadas -->
+        <div class="circle">
+            <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1724232054/Captura_de_pantalla_2024-08-21_041637-modified_opo4si.png" width="180px"  alt="Descripción de la imagen">
+        </div>
+        
+        <div class="plus">+</div>
+        
+        <!-- Tercer círculo con 5 pentágonos superpuestos -->
+        <div class="circle">
+            <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1724232054/Captura_de_pantalla_2024-08-21_041537-modified_chlwaj.png" width="180px"  alt="Descripción de la imagen">
+        </div>
+      </div>
+      <p class="description">Utilizamos estos tres métodos para evaluar tu negocio y potenciar tus capacidades.</p>
     </div>
-</div>
+  </div>
