--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -1,15 +1,47 @@
-<div class="cont">
-   <div class="titulo">
-     <h4>Evalua y mejora</h4>
-     <h4>tus estrategias</h4>
-     <h4>empresariales.</h4>
-     <h1>EstraMyPyme</h1>
-     <div class="byeafitdos">
-        <h5>By</h5>
-        <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1721256417/Logo_EAFIT_2015_-_Blanco_wzm6j8.png" width="90px">
-     </div>
-   </div>
-   <div class="trayectory">
-        <h5>Más de 20 años de experiencia del Grupo de <br> Estudio de Estrategia (GEE) de EAFIT<br> respaldan esta iniciativa.</h5>
-   </div>
+
+<div class="componente_pre">
+<div class="diagestr-tittle">
+   <h1>DIAGNOSTICO <br>ESTRATEGICO<br> PARA VALORACION <br>DE EMPRESAS</h1>
 </div>
+
+<div class="tittle-comprimed">
+   <ul class="text hidden">
+      <li class="compress-indicator">+</li>
+      <li class="ghost">E</li>
+      <li class="ghost">s</li>
+      <li class="ghost">t</li>
+      <li class="ghost">r</li>
+      <li class="ghost">a</li>
+      <li class="spaced">M</li>
+      <li>y</li>
+      <li class="spaced">P</li>
+      <li>y</li>
+      <li>m</li>
+      <li>e</li>
+    </ul>
+</div>
+<div class="cont">
+
+   <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+<div class='content'>
+  <div class='visible'>
+    <p>
+      Hola
+    </p>
+    <ul class="ulli">
+      <li>Consultor</li>
+      <li>Empresa </li>
+      <li>Estudiante </li>
+    </ul>
+  </div>
+</div>
+
+
+<div class="trayectory">
+   <h5>Más de 20 años de experiencia del Grupo de <br> Estudio de Estrategia (GEE) de EAFIT<br> respaldan esta iniciativa.</h5>
+</div>
+</div>
+
+
+</div>
+
