--- a/src/app/components/razonsocial/razonsocial.component.html
+++ b/src/app/components/razonsocial/razonsocial.component.html
@@ -3,7 +3,7 @@
     <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1722374911/Default_A_warm_and_inviting_portrait_of_a_Colombian_woman_in_h_3_flig9i.jpg"  class="round-image">
     <svg  class="cuadrorazonsocial" xmlns="http://www.w3.org/2000/svg" width="423" height="376" viewBox="0 0 423 376" fill="none">
         <path d="M422.5 188C394 398.5 144.5 312.5 180 376C80.5887 376 0 291.83 0 188C0 84.1705 80.5887 0 180 0C279.411 0 406.5 0 422.5 188Z" fill="#1103AA"/>
-        <text class="ingresacontenido" x="50%" y="20%" text-anchor="middle" fill="white" font-size="26px" font-weight="500" font-style="normal">
+        <text class="ingresacontenido" x="40%" y="20%" text-anchor="middle" fill="white" font-size="26px" font-weight="500" font-style="normal">
             <tspan x="50%" dy="0.5em" class="interponer">Apoyamos a</tspan>
             <tspan x="50%" dy="1.2em" class="superponer">las microempresas que</tspan>
             <tspan x="50%" dy="1.2em" class="superponer">representan el 95,5%</tspan>
@@ -13,7 +13,14 @@
             <tspan x="50%" dy="1.2em" class="interponer">formalizarse y crecer</tspan>
         </text>
     </svg>
-    <button  routerLink="registro"   class="registratelanding">REGISTRATE <BR>AHORA</button> 
+        <section class="container">
+            <button routerLink="registro"  class="special-button" data-hover="Se parte ahora!">
+              <div>Registrate !</div>
+            </button>
+          </section>
+
     </div>
+    
+    
 
 <router-outlet></router-outlet>
