--- a/src/app/components/quienessomos/quienessomos.component.css
+++ b/src/app/components/quienessomos/quienessomos.component.css
@@ -1,17 +1,21 @@
+*{
+  font-family:'Muli';
+  font-size: 1.2rem;
+}
 .container {
   position: relative;
-  width: 100vw;
+  width: 90vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  padding-left: 7rem;
+  padding-left: 12rem;
 }
 
 .svg-container {
   width: 35%;
-  min-width: 20rem;
+  min-width: 17rem;
   max-width: 90rem;
   height: auto;
   margin-top: 19rem;
@@ -19,7 +23,7 @@
 
 .formcaracterizacion {
   position: relative;
-  bottom: -13rem;
+  bottom: -15rem;
   right: 13rem;
   background-color: #00ff;
   width: 30vw;
@@ -65,6 +69,33 @@
     padding: 0.8rem 1rem;
     font-size: 0.9rem;
   }
+  .container {
+    position: relative;
+    width: 85vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding-left: 12rem;
+  }
+
+  .formcaracterizacion {
+    position: relative;
+    bottom: -15rem;
+    right: 15rem;
+    background-color: #00ff;
+    width: 30vw;
+    max-width: 17rem;
+    text-align: center;
+    padding: 1.3rem 2rem;
+    border-radius: 50px;
+    margin-top: -3rem;
+    font-size: .8rem;
+    box-sizing: border-box;
+    color: white;
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -75,6 +106,17 @@
     padding: 0.6rem 0.8rem;
     font-size: 0.8rem;
   }
+
+  .container {
+    position: relative;
+    width: 85vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding-left: 8rem;
+  }
 }
 
 @media (max-width: 480px) {
@@ -84,4 +126,20 @@
     padding: 0.4rem 0.6rem;
     font-size: 0.7rem;
   }
+
+  
+  .container {
+    position: relative;
+    width: 85vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding-left: 8rem;
+  }
+  
+
+  
+
 }
