--- a/src/app/components/razonsocial/razonsocial.component.css
+++ b/src/app/components/razonsocial/razonsocial.component.css
@@ -1,6 +1,9 @@
+*{
+  font-family:'Muli';
+  font-size: 1.8rem;
+}
 .con-ten {
     width: 100vw;
-    height: 100vh;
     margin: 0;
     color: white;
     display: flex;
@@ -8,36 +11,100 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
-    margin-top: 12rem;
+    margin-top: 19rem;
+    margin-bottom: 10rem;
   }
 
+  .ingresacontenido {
+    /* Estilo marcado como muy importante */
+
+    color: #fff !important; /* Asegura que el color blanco se aplique siempre */
+    font-size: 26px !important; /* Asegura que el tamaño de fuente sea siempre 26px */
+    /* Asegura que el texto esté centrado */
+  }
 
   .round-image {
+    
     border-radius: 50%;
     width: 28rem;
     height: 28rem;
     object-fit: cover; /* Para asegurarse de que la imagen se recorte y mantenga su proporción */
+    margin-top: -2rem;
+  }
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
+
+*, *:before, *:after{
+  box-sizing: border-box;
+  padding: 0; margin: 0;
+  font: 300 1em/1.5 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  text-decoration: none;
+  color: #0f48e5;
 }
 
-.registratelanding{
-  background-color: #00ff;
-  color: white;
-  width: 30vw;
-  max-width: 17rem;
-  min-width: 10rem;
-  text-align: center;
-  padding: 1.3rem 2rem;
-  border-radius: 50px;
-  font-size: .8rem;
-  margin-top: -22rem;
-  cursor: pointer;
-  border: black;
+
+  section.container{
+    min-width: 500px;
+    margin: 10% auto;
+    text-align: center;
+    margin-top: -297px;  }
+    a:hover{border-bottom: 1px solid #0f48e5;} 
+    h1{font-size: 2em; padding: 20px 0;}
+    
+
+    button:hover{cursor: pointer}
+    button {
+      background: transparent; outline: none;
+      position: relative;
+      border: 2px solid #0f48e5;
+      padding: 15px 50px;
+      overflow: hidden;
+    }
+
+    /*button:before (attr data-hover)*/
+    button:hover:before{opacity: 1; transform: translate(0,0);}
+    button:before{
+      content: attr(data-hover);
+      position: absolute;
+      top: 1.1em; left: 0;
+      width: 100%;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      font-weight: 800;
+      font-size: .8em;
+      opacity: 0;
+      transform: translate(-100%,0);
+      transition: all .3s ease-in-out;
+    }
+      /*button div (button text before hover)*/
+      button:hover div{opacity: 0; transform: translate(100%,0)}
+      button div{
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        font-weight: 800;
+        font-size: .8em;
+        transition: all .3s ease-in-out;
+      }
+  
+@media (max-width: 480px) {
+  button {
+    padding: 0.8em 1.5em;
+    font-size: 0.8em;
+  }
+
+  button:before {
+    font-size: 0.6em;
+  }
+
+  button div {
+    font-size: 0.6em;
+  }
+
+  
 }
 
-.registratelanding:hover {
-    box-shadow: 0 0 0 3px black, 0 0 0 5px blue; 
-    transition: box-shadow 0.3s ease-in-out;
-}
 
 /* Media queries para ajustar el tamaño de la imagen en pantallas más pequeñas */
 @media (max-width: 1024px) {
@@ -59,15 +126,19 @@
         width: 14rem; /* Ajusta el ancho a un tamaño menor */
         height: 14rem; /* Ajusta la altura en proporción */
     }
+
+    section.container{
+      margin-left: -6rem;
+    }
 }
 
 
 .cuadrorazonsocial {
   position: relative;
   bottom: 28rem;
-  right: 10rem;
+  right: 13rem;
   width: 26vw;
-  max-width: 13rem;
+  max-width: 18rem;
   text-align: center;
   padding: 1.3rem 2rem;
   border-radius: 50px;
@@ -100,12 +171,13 @@
   @media (max-width: 480px) {
     .cuadrorazonsocial  {
       width: 80vw;
-      max-width: 7rem;
+      max-width: 11rem;
       padding: 0.4rem 0.6rem;
       font-size: 0.7rem;
       bottom: 20rem;
-      right: 5rem;
+      right: 4rem;
     }
+
   }
 
 
