--- a/src/app/components/user-detail/user-detail.component.css
+++ b/src/app/components/user-detail/user-detail.component.css
@@ -1,19 +1,20 @@
 /* user-detail.component.css */
 .user-detail-container {
-  max-height: 400px;
+  max-height: 340px;
   overflow-y: auto;
 }
 
 .user-detail {
   background-color: #fff;
   color: #000;
-  padding: 20px;
+  padding: -10px;
+  padding-right: 1rem;
+  padding-top: 1rem;
   border-radius: 10px;
-  border: 1px solid #000;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
   max-width: 600px;
 }
 
@@ -49,8 +50,10 @@
 
 .button-container {
   display: flex;
-  gap: 10px;
+  gap: 0px;
   margin-top: 20px;
+  flex-direction: column;
+  
 }
 
 .edit-button,
@@ -62,6 +65,7 @@
   padding: 10px 20px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
+  margin-right: -28px;
 }
 
 .edit-button:hover,
