--- a/src/app/views/registro/registro.component.css
+++ b/src/app/views/registro/registro.component.css
@@ -1,9 +1,16 @@
 * {
   font-family: "Inter", sans-serif;
+  
 }
 
+body{
+  overflow-x: hidden;
+
+}
+
+
 .register-container {
-  height: 100vh;
+  height: 95vh;
   width: 100vw;
   background-color: black;
   color: white; 
@@ -11,8 +18,6 @@
   margin: 0;
   padding: 0;
   left: 0;
-  overflow-y: hidden;
- 
 
 }
 
