se agregaron cambios admin

--- a/src/app/components/logomasslogan/logomasslogan.component.html
+++ b/src/app/components/logomasslogan/logomasslogan.component.html
@@ -8,8 +8,7 @@
         <h6>By</h6>
         <img class="imagen-logo" src="https://res.cloudinary.com/dpeqdynym/image/upload/v1721256417/Logo_EAFIT_2015_-_Blanco_wzm6j8.png" width="90" height="40" alt="Logo EAFIT">
       </div>
-      <p>Evalua y mejora tus estrategias <br> 
-empresariales.</p>
+      <p class="description">Evalua y mejora tus estrategias <br> empresariales.</p>
     </div>
   </div>
   <div class="right-info">
