finalizamos primera etapa

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
 <div class="menu_landing" [ngClass]="{ 'open': isMenuOpen }">
   <button [routerLink]="['/']" [fragment]="'quienes-somos'">Quienes somos</button>
   <button [routerLink]="['/']" [fragment]="'razon-social'">Razon social</button>
-  <h4>+MyPyme</h4>
+  <h4>+MiPyme</h4>
   <button [routerLink]="['/']" [fragment]="'diagnostico'">Diagnostico</button>
   <button [routerLink]="['/']" [fragment]="'contactanos'">Contactanos</button>
 </div>
