--- a/src/app/components/logomasslogan/logomasslogan.component.html
+++ b/src/app/components/logomasslogan/logomasslogan.component.html
@@ -3,7 +3,7 @@
   <div class="left-info">
 
     <div class="logo">
-      <h1>EstraMyPyme</h1>
+      <h1>EstraMiPyme</h1>
       <div class="by-eafit">
         <h6>By</h6>
         <img class="imagen-logo" src="https://res.cloudinary.com/dpeqdynym/image/upload/v1721256417/Logo_EAFIT_2015_-_Blanco_wzm6j8.png" width="90" height="40" alt="Logo EAFIT">
